# market_viewer_device

./: platformio.ini  readme.md
include/: lv_conf.h
lib/AudioManager/: AudioManager.cpp  AudioManager.h
lib/CustomUIElements/: messageDisplay.cpp  messageDisplay.h
lib/GuiManager/: GuiManager.cpp  GuiManager.h
lib/HardwareDriver/: HardwareDriver.cpp  HardwareDriver.h
lib/HttpRequestManager/: HttpRequestManager.cpp  HttpRequestManager.h
lib/ScreenTypes/: AiTextScreen.cpp  AiTextScreen.h  BaseScreen.cpp  BaseScreen.h  ClockScreen.cpp  ClockScreen.h  CryptoScreen.cpp  CryptoScreen.h  StockScreen.cpp  StockScreen.h  TimerScreen.cpp  TimerScreen.h
lib/ScreensManager/: ScreensManager.cpp  ScreensManager.h
lib/WifiConfig/: WifiConfig.cpp  WifiConfig.h
lib/custom_ui_helper/: graphDrawer.cpp  (+5 more)
lib/ui/: CMakeLists.txt  filelist.txt  ui.c  ui.h  ui_aiTextScreen.c  ui_aiTextScreen.h  ui_brightnessScreen.c  ui_brightnessScreen.h  ui_clockScreen.c  ui_clockScreen.h  ui_cryptoScreen.c  ui_cryptoScreen.h  ui_events.cpp  ui_events.h  ui_font_Mono20.c  ui_font_Mono40.c  ui_font_MonoBold100.c  ui_font_MonoBold60.c  ui_font_digitsFont.c  ui_font_digitsFont100.c  ui_font_mono30.c  ui_font_mono40.c  ui_font_mono50.c  ui_font_monoBold100.c  ui_font_monoBold20.c  ui_font_monoBold50.c  ui_font_monoBold60.c  ui_font_monoBold80.c  ui_font_monoLight30.c  ui_helpers.c  ui_helpers.h  ui_homeScreen.c  ui_homeScreen.h  ui_img_1028167261.c  ui_img_121694436.c  ui_img_1272477160.c  ui_img_1314322640.c  ui_img_1458903039.c  ui_img_1702299517.c  ui_img_1748131633.c  (+34 more)
src/: main.cpp
(+8 files in other folders)
